--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - master
-      - dev
-  pull_request:
-    branches:
-      - master
-      - release-*
-      - dev
-
+on: workflow_dispatch
 
 jobs:
   ci:
@@ -23,4 +13,11 @@ jobs:
       - name: Install yarn
         run: npm install -g yarn
 
-      
+      - name: Enable workflow
+        run: |
+          curl -L \ 
+          -X PUT \ 
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/tidbcloud/dbaas-ui/actions/workflows/delay.yml/disable
