--- a/.github/workflows/delay.yml
+++ b/.github/workflows/delay.yml
@@ -2,7 +2,7 @@ name: Delay CI
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: "*/5 * * * *"
 
 jobs:
   ci:
@@ -14,3 +14,12 @@ jobs:
           node-version: 18
       - name: print something
         run: echo "run after 2 minutes..."
+
+      - name: Enable workflow
+        run: |
+          curl -L \ 
+          -X PUT \ 
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/tidbcloud/dbaas-ui/actions/workflows/delay.yml/enable
