--- a/.github/workflows/delay.yml
+++ b/.github/workflows/delay.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: "*/5 * * * *"
 
+env:
+    GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -20,6 +23,6 @@ jobs:
           curl -L \ 
           -X PUT \ 
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer $GITHUB_TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/tidbcloud/dbaas-ui/actions/workflows/delay.yml/enable
