--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  ENABLE_WORKFLOW_URL: "https://api.github.com/repos/tidbcloud/dbaas-ui/actions/workflows/delay.yml/disable"
+  ENABLE_WORKFLOW_URL: https://api.github.com/repos/tidbcloud/dbaas-ui/actions/workflows/delay.yml/disable
 
 jobs:
   ci:
@@ -19,8 +19,7 @@ jobs:
 
       - name: Enable workflow
         run: |
-          curl -L \ 
-          -X PUT \ 
+          curl -X PUT \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer $GITHUB_TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
