--- a/.github/workflows/delay.yml
+++ b/.github/workflows/delay.yml
@@ -6,6 +6,7 @@ on:
 
 env:
     GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    DISABLE_WORKFLOW_URL: https://api.github.com/repos/zhangc110033/xiaoMing/actions/workflows/delay.yml/disable
 
 jobs:
   ci:
@@ -25,4 +26,4 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer $GITHUB_TOKEN" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/tidbcloud/dbaas-ui/actions/workflows/delay.yml/disable
+          $DISABLE_WORKFLOW_URL
