--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on: workflow_dispatch
 env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   ENABLE_WORKFLOW_URL: https://api.github.com/repos/zhangc110033/xiaoMing/actions/workflows/delay.yml/enable
+  GITHUB_WORKFLOW_URL: "${{github.server_url}}/${{github.repository}}/actions/runs/${{github.run_id}}"
 
 jobs:
   ci:
@@ -14,11 +15,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          
-      - name: Enable workflow
-        run: |
-          curl -X PUT \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer $GITHUB_TOKEN" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          $ENABLE_WORKFLOW_URL
+
+      # - name: Enable workflow
+      #   run: |
+      #     curl -X PUT \
+      #     -H "Accept: application/vnd.github+json" \
+      #     -H "Authorization: Bearer $GITHUB_TOKEN" \
+      #     -H "X-GitHub-Api-Version: 2022-11-28" \
+      #     $ENABLE_WORKFLOW_URL
+      - name: output ci link
+        run: echo $GITHUB_WORKFLOW_URL
