--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,28 @@ jobs:
       #     -H "Authorization: Bearer $GITHUB_TOKEN" \
       #     -H "X-GitHub-Api-Version: 2022-11-28" \
       #     $ENABLE_WORKFLOW_URL
-      - name: output ci link
-        run: echo $GITHUB_WORKFLOW_URL
+      
+      - name: Notify
+        if: failure()
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
+           -d '{
+            "msg_type": "post",
+            "content": {
+              "post": {
+                "zh-CN": {
+                  "title": "The production preview E2E-Test has failed!",
+                  "content": [
+                    [
+                      {
+                        "tag": "a",
+                        "text": "Click here to check",
+                        "href": $GITHUB_WORKFLOW_URL
+                      }
+                    ]
+                  ]
+                }
+              }
+            }
+          }' \
+          https://open.feishu.cn/open-apis/bot/v2/hook/8017099d-418e-4cf0-8636-0bdae81be4e3
