--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
                       {
                         "tag": "a",
                         "text": "Click here to check",
-                        "href": $GITHUB_WORKFLOW_URL
+                        "href": "$GITHUB_WORKFLOW_URL"
                       }
                     ]
                   ]
@@ -46,4 +46,4 @@ jobs:
               }
             }
           }' \
-          "https://open.feishu.cn/open-apis/bot/v2/hook/8017099d-418e-4cf0-8636-0bdae81be4e3"
+          https://open.feishu.cn/open-apis/bot/v2/hook/8017099d-418e-4cf0-8636-0bdae81be4e3
