--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
                       {
                         "tag": "a",
                         "text": "Click here to check",
-                        "href": “${{env.GITHUB_WORKFLOW_URL}}”
+                        "href": "${{env.GITHUB_WORKFLOW_URL}}"
                       }
                     ]
                   ]
